--- a/gui/login.html
+++ b/gui/login.html
@@ -20,12 +20,12 @@
                     <img class="logo" src="img/logo.png" alt="logo">
                 </div>
                 <div class="wrap-form-input btm-space">
-                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="text" name="username" placeholder="Username" minlength="4" maxlength="32" required>
                 </div>
                 <div class="wrap-form-input btm-space">
-                    <input type="password" name="password" placeholder="Password" required>
+                    <input type="password" name="password" placeholder="Password" minlength="8" maxlength="128" required>
                 </div>
-                <div class="btm-space">
+                <div>
                     <button class="btn btn-primary login-btn" type="submit">Log in</button>
                 </div>
                 <a href="#">Sign up</a>
