--- a/gui/signup.html
+++ b/gui/signup.html
@@ -23,13 +23,14 @@
                     <div class="wrap-form-input">
                         <input type="text" name="username" placeholder="Username" minlength="4" maxlength="32" required>
                     </div>
-                    <p class="helper">4 ~ 32 length</p>    
+                    <p class="helper">* 4 - 32 characters</p>    
                 </div>
                 <div class="btm-space">
                     <div class="wrap-form-input">
                         <input type="password" name="password" placeholder="Password" minlength="8" maxlength="128" required>
                     </div>
-                    <p class="helper">8 ~ 128 length with number, alphabet, and special character</p>    
+                    <p class="helper">* 8 - 128 characters</p>    
+                    <p class="helper">* At least 1 number, 1 special character, and both uppercase and lowercase letters</p>
                 </div>
                 <div>
                     <button class="btn btn-primary" type="submit">Sign up</button>
