MOD text and padding

--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -217,16 +217,16 @@
                                 <table>
                                     <tr>
                                         <!-- data should be included inside b tags -->
-                                        <td><b>public</b><br><label>institution</label></td>
-                                        <td><b>50%</b><br><label>admission rate</label></td>
-                                        <td><b>90%</b><br><label>completion rate</label></td>
+                                        <td><b>Public</b><br><label>Institution</label></td>
+                                        <td><b>50%</b><br><label>Admission rate</label></td>
+                                        <td><b>90%</b><br><label>Completion rate</label></td>
                                         <td></td>
                                     </tr>
                                     <tr>
-                                        <td><b>$20000</b><br><label>tuition</label></td>
-                                        <td><b>$20000</b><br><label>median debt amount</label></td>
-                                        <td><b>100</b><br><label>ranking</label></td>
-                                        <td><b>5000</b><br><label>size</label></td>
+                                        <td><b>$20000</b><br><label>Tuition</label></td>
+                                        <td><b>$20000</b><br><label>Median debt amount</label></td>
+                                        <td><b>100</b><br><label>Ranking</label></td>
+                                        <td><b>5000</b><br><label>Size</label></td>
                                     </tr>
                                 </table>
                             </div>
@@ -238,16 +238,16 @@
                             <div class="item-info">
                                 <table>
                                     <tr>
-                                        <td><b>public</b><br><label>institution</label></td>
-                                        <td><b>50%</b><br><label>admission rate</label></td>
-                                        <td><b>90%</b><br><label>completion rate</label></td>
+                                        <td><b>Public</b><br><label>Institution</label></td>
+                                        <td><b>50%</b><br><label>Admission rate</label></td>
+                                        <td><b>90%</b><br><label>Completion rate</label></td>
                                         <td></td>
                                     </tr>
                                     <tr>
-                                        <td><b>$20000</b><br><label>tuition</label></td>
-                                        <td><b>$20000</b><br><label>median debt amount</label></td>
-                                        <td><b>100</b><br><label>ranking</label></td>
-                                        <td><b>5000</b><br><label>size</label></td>
+                                        <td><b>$20000</b><br><label>Tuition</label></td>
+                                        <td><b>$20000</b><br><label>Median debt amount</label></td>
+                                        <td><b>100</b><br><label>Ranking</label></td>
+                                        <td><b>5000</b><br><label>Size</label></td>
                                     </tr>
                                 </table>
                             </div>
