MOD change button color

--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -199,7 +199,7 @@
                     <div class="wrap-result">
                         <div class="result-top">
                             <span class="result-text">Results</span>
-                            <button type="button" id="sort-btn" class="btn btn-secondary shadow-none">sort by college recommendation</button>
+                            <button type="button" id="sort-btn" class="btn btn-primary shadow-none">sort by college recommendation</button>
                         </div>
                         <!-- Initially, there should be no tags inside the tag below. -->
                         <!-- Frontend ajax should add tags with data inside the tag below -->
