--- a/gui/track_application.html
+++ b/gui/track_application.html
@@ -173,7 +173,7 @@
                     <div class="wrap-result">
                         <div class="result-top">
                             <span class="result-text">Results</span>
-                            <button type="button" id="plot-btn" class="btn btn-secondary shadow-none" data-toggle="modal" data-target="#plot-modal">view scatterplot</button>
+                            <button type="button" id="plot-btn" class="btn btn-primary shadow-none" data-toggle="modal" data-target="#plot-modal">view scatterplot</button>
                             <div class="modal fade" id="plot-modal" tabindex="-1" role="dialog" aria-labelledby="plot-modal-label" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                 <div class="modal-content">
