--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>c4me</title>
         <link rel="shortcut icon"type="image/x-icon" href="img/favicon.png">
+        <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="css/common.css">
         <link rel="stylesheet" href="css/search_college.css">
