--- a/front_end/react_app/public/index.html
+++ b/front_end/react_app/public/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.png">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="c4me"
+      content="c4me site created using create-react-app"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
