MOD change MAX to RANGE

--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -55,9 +55,10 @@
                                 <div id="filters-dropdown-content">
                                     <table>
                                         <tr>
-                                            <td><b>Max admission rate (%)</b>
+                                            <td><b>Admission rate (%)</b>
                                                 <div class="wrap-filter">
-                                                    <input type="number" class="form-control shadow-none" id="admission-rate" placeholder="0 - 100" min="0" max="100">
+                                                    <input type="number" class="form-control shadow-none" id="admission-rate-min" placeholder="0 - 100" min="0" max="100">
+                                                    - <input type="number" class="form-control shadow-none" id="admission-rate-max" placeholder="0 - 100" min="0" max="100">
                                                 </div>
                                             </td>
                                             <td><b>Max ranking</b><span id="ranking-val">-</span>
