--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -154,9 +154,9 @@
                                                     </select>
                                                 </div>                                                
                                             </td>
-                                            <td><b>Max tuition (k $)</b>
+                                            <td><b>Max cost of attendance (k $)</b>
                                                 <div class="wrap-filter">
-                                                    <input type="number" class="form-control shadow-none" id="tuition" placeholder="1 - 100" min="1" max="100">
+                                                    <input type="number" class="form-control shadow-none" id="cost-of-attendance" placeholder="1 - 100" min="1" max="100">
                                                 </div>
                                             </td>
                                             <td></td>
@@ -202,7 +202,17 @@
                     <div class="wrap-result">
                         <div class="result-top">
                             <span class="result-text">Results</span>
-                            <button type="button" id="sort-btn" class="btn btn-primary shadow-none">sort by college recommendation</button>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" type="button" id="sort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    sort by
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="sort">
+                                    <button class="dropdown-item sort-option" type="button">college name</button>
+                                    <button class="dropdown-item sort-option" type="button">cost of attendance</button>
+                                    <button class="dropdown-item sort-option" type="button">ranking</button>
+                                    <button class="dropdown-item sort-option" type="button">recommendation score</button>
+                                </div>
+                            </div>
                         </div>
                         <!-- Initially, there should be no tags inside the tag below. -->
                         <!-- Frontend ajax should add tags with data inside the tag below -->
@@ -225,7 +235,7 @@
                                         <td></td>
                                     </tr>
                                     <tr>
-                                        <td><b>$20000</b><br><label>Tuition</label></td>
+                                        <td><b>$20000</b><br><label>Cost of attendance</label></td>
                                         <td><b>$20000</b><br><label>Median debt amount</label></td>
                                         <td><b>100</b><br><label>Ranking</label></td>
                                         <td><b>5000</b><br><label>Size</label></td>
@@ -246,7 +256,7 @@
                                         <td></td>
                                     </tr>
                                     <tr>
-                                        <td><b>$20000</b><br><label>Tuition</label></td>
+                                        <td><b>$20000</b><br><label>Cost of attendance</label></td>
                                         <td><b>$20000</b><br><label>Median debt amount</label></td>
                                         <td><b>100</b><br><label>Ranking</label></td>
                                         <td><b>5000</b><br><label>Size</label></td>
