--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -41,7 +41,7 @@
                     <div class="wrap-search-filters">
                         <div class="search-box">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control shadow-none" placeholder="College Name" aria-label="College Name" aria-describedby="search-btn">
+                                <input type="text" class="form-control shadow-none" placeholder="College name" aria-label="College name" aria-describedby="search-btn">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary shadow-none" type="button" id="search-btn">Search</button>
                                 </div>
@@ -50,7 +50,7 @@
                         <div class="filters-box">
                             <div class="filters-dropdown">
                                 <button class="btn btn-secondary shadow-none" type="button" id="filters-dropdown-btn">
-                                    filters
+                                    Filters
                                 </button>
                                 <div id="filters-dropdown-content">
                                     <table>
@@ -146,11 +146,11 @@
                             <div class="filters-radio">
                                 <div class="custom-control custom-radio">
                                     <input type="radio" id="strict" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="strict">strict</label>
+                                    <label class="custom-control-label" for="strict">Strict</label>
                                 </div>
                                 <div class="custom-control custom-radio">
                                     <input type="radio" id="lax" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="lax">lax</label>
+                                    <label class="custom-control-label" for="lax">Lax</label>
                                 </div>
                             </div>                            
                         </div>
@@ -160,13 +160,13 @@
                             <span class="result-text">Results</span>
                             <div class="dropdown">
                                 <button class="btn btn-primary dropdown-toggle" type="button" id="sort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    sort by
+                                    Sort by
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="sort">
-                                    <button class="dropdown-item sort-option" type="button">college name</button>
-                                    <button class="dropdown-item sort-option" type="button">cost of attendance</button>
-                                    <button class="dropdown-item sort-option" type="button">ranking</button>
-                                    <button class="dropdown-item sort-option" type="button">recommendation score</button>
+                                    <button class="dropdown-item sort-option" type="button">College name</button>
+                                    <button class="dropdown-item sort-option" type="button">Cost of attendance</button>
+                                    <button class="dropdown-item sort-option" type="button">Ranking</button>
+                                    <button class="dropdown-item sort-option" type="button">Recommendation score</button>
                                 </div>
                             </div>
                         </div>
