--- a/gui/track_application.html
+++ b/gui/track_application.html
@@ -41,7 +41,7 @@
                     <div class="wrap-search-filters">
                         <div class="search-box">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control shadow-none" placeholder="College Name" aria-label="College Name" aria-describedby="search-btn">
+                                <input type="text" class="form-control shadow-none" placeholder="College name" aria-label="College name" aria-describedby="search-btn">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary shadow-none" type="button" id="search-btn">Search</button>
                                 </div>
@@ -50,7 +50,7 @@
                         <div class="filters-box">
                             <div class="filters-dropdown">
                                 <button class="btn btn-secondary shadow-none" type="button" id="filters-dropdown-btn">
-                                    filters
+                                    Filters
                                 </button>
                                 <div id="filters-dropdown-content">
                                     <table>
@@ -69,19 +69,19 @@
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
                                                                         <input type="checkbox" class="custom-control-input" id="accepted">
-                                                                        <label class="custom-control-label" for="accepted">accepted</label>
+                                                                        <label class="custom-control-label" for="accepted">Accepted</label>
                                                                     </div>
                                                                 </td>
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
                                                                         <input type="checkbox" class="custom-control-input" id="denied">
-                                                                        <label class="custom-control-label" for="denied">denied</label>
+                                                                        <label class="custom-control-label" for="denied">Denied</label>
                                                                     </div>
                                                                 </td>
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
                                                                         <input type="checkbox" class="custom-control-input" id="deferred">
-                                                                        <label class="custom-control-label" for="deferred">deferred</label>
+                                                                        <label class="custom-control-label" for="deferred">Deferred</label>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -89,19 +89,19 @@
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
                                                                         <input type="checkbox" class="custom-control-input" id="wait-listed">
-                                                                        <label class="custom-control-label" for="wait-listed">wait-listed</label>
+                                                                        <label class="custom-control-label" for="wait-listed">Wait-listed</label>
                                                                     </div>
                                                                 </td>
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
                                                                         <input type="checkbox" class="custom-control-input" id="withdrawn">
-                                                                        <label class="custom-control-label" for="withdrawn">withdrawn</label>
+                                                                        <label class="custom-control-label" for="withdrawn">Withdrawn</label>
                                                                     </div>
                                                                 </td>
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
                                                                         <input type="checkbox" class="custom-control-input" id="pending">
-                                                                        <label class="custom-control-label" for="pending">pending</label>
+                                                                        <label class="custom-control-label" for="pending">Pending</label>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -162,11 +162,11 @@
                             <div class="filters-radio">
                                 <div class="custom-control custom-radio">
                                     <input type="radio" id="strict" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="strict">strict</label>
+                                    <label class="custom-control-label" for="strict">Strict</label>
                                 </div>
                                 <div class="custom-control custom-radio">
                                     <input type="radio" id="lax" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="lax">lax</label>
+                                    <label class="custom-control-label" for="lax">Lax</label>
                                 </div>
                             </div>                            
                         </div>
@@ -174,7 +174,7 @@
                     <div class="wrap-result">
                         <div class="result-top">
                             <span class="result-text">Results</span>
-                            <button type="button" id="plot-btn" class="btn btn-primary shadow-none" data-toggle="modal" data-target="#plot-modal">view scatterplot</button>
+                            <button type="button" id="plot-btn" class="btn btn-primary shadow-none" data-toggle="modal" data-target="#plot-modal">View scatterplot</button>
                             <div class="modal fade" id="plot-modal" tabindex="-1" role="dialog" aria-labelledby="plot-modal-label" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -215,7 +215,7 @@
                                 <!-- student's username should be included inside h5 tag -->
                                 <h5 class="username">username1<br>
                                     <!-- accpeted: badge-success | denied: badge-danger | rest: badge-warning -->
-                                    <span class="badge badge-success">accepted</span>
+                                    <span class="badge badge-success">Accepted</span>
                                 </h5>
                                 <!-- high school name should be one the left side of br tag
                                     high school city  should be combined with high school state by comma and this combination should be on the right side of br tag and inside h5 tag -->
@@ -303,11 +303,11 @@
                                 </a>
                             </div>
                             <button class="list-group-item list-group-item-action">
-                                <h5 class="username">username2<br><span class="badge badge-danger">denied</span></h5>
+                                <h5 class="username">username2<br><span class="badge badge-danger">Denied</span></h5>
                                 <h5 class="high-school">Stony Brook High School<br>Stony Brook, NY</h5>
                             </button>
                             <button class="list-group-item list-group-item-action">
-                                <h5 class="username">username3<br><span class="badge badge-warning">wait-listed</span></h5>
+                                <h5 class="username">username3<br><span class="badge badge-warning">Wait-listed</span></h5>
                                 <h5 class="high-school">Stony Brook High School<br>Stony Brook, NY</h5>
                             </button>
                         </div>
