MOD sort by options

--- a/gui/search_college.html
+++ b/gui/search_college.html
@@ -163,10 +163,11 @@
                                     Sort by
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="sort">
-                                    <button class="dropdown-item sort-option" type="button">College name</button>
-                                    <button class="dropdown-item sort-option" type="button">Cost of attendance</button>
-                                    <button class="dropdown-item sort-option" type="button">Ranking</button>
-                                    <button class="dropdown-item sort-option" type="button">Recommendation score</button>
+                                    <button class="dropdown-item sort-option" type="button">Admission rate - High to Low</button>
+                                    <button class="dropdown-item sort-option" type="button">College name - Alphabetical Order</button>
+                                    <button class="dropdown-item sort-option" type="button">Cost of attendance - Low to High</button>
+                                    <button class="dropdown-item sort-option" type="button">Ranking - High to Low</button>
+                                    <button class="dropdown-item sort-option" type="button">Recommendation score - High to Low</button>
                                 </div>
                             </div>
                         </div>
