ADD scatterplot option buttons

--- a/gui/track_application.html
+++ b/gui/track_application.html
@@ -185,7 +185,14 @@
                                     </button>
                                     </div>
                                     <div class="modal-body">
-                                    <!-- put graph here -->
+                                        <div id="plot-modal-buttons">
+                                            <button type="button" id="plot-modal-sat-btn" class="btn btn-primary shadow-none plot-modal-option-btn">SAT (Math+EBRW)</button>
+                                            <button type="button" id="plot-modal-act-btn" class="btn btn-primary shadow-none plot-modal-option-btn">ACT Composite</button>
+                                            <button type="button" id="plot-modal-overall-btn" class="btn btn-primary shadow-none plot-modal-option-btn">SAT2+SAT/ACT</button>
+                                        </div>
+                                        <div id="plot-modal-scatterplot">
+                                            <!-- put graph here -->
+                                        </div>
                                     </div>
                                 </div>
                                 </div>
